src/objects/Coverage_Team__c.object
<CustomObject>
    <description>Contact Coverage Team is used to track the team that manages the Contact</description>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Coverage Team</relationshipLabel>
        <relationshipName>Coverage_Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coverage_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Role_ID__c</fullName>
        <label>Coverage Role ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Role__c</fullName>
        <label>Coverage Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Relations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US External Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Internal Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Level_Code__c</fullName>
        <label>Distribution Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Level__c</fullName>
        <label>Distribution Level</label>
        <picklist>
            <picklistValues>
                <fullName>Global Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Coverage Team</relationshipLabel>
        <relationshipName>Contact_Coverage_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory_Description__c</fullName>
        <label>Territory Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Description__c</fullName>
        <label>Zone Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contact Coverage Team</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Coverage Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Coverage Team</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>